# mail-autodiscover-autoconfig

./: Cargo.toml  Makefile  flake.nix
.github/workflows/: publish.yml
docker/: Dockerfile
src/: config.rs  main.rs
src/resources/: AppleResponse.rs  AutoDiscoverXml.rs  DnsTxtResponse.rs
src/routes/: autoconfig.rs  dns.rs  tech.rs
templates/xml/: autodiscover.xml.tera  config-v1.1.xml.tera  email_mobileconfig.tera
