[package]
name = "mail-autodiscover-autoconfig"
version = "1.6.1"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.72"

[badges]
github = { repository = "mail-autodiscover-autoconfig", branch = "main" }
#codecov = { repository = "mail-autodiscover-autoconfig", branch = "main", service = "github" }
is-it-maintained-issue-resolution = { repository = "mail-autodiscover-autoconfig" }
is-it-maintained-open-issues = { repository = "mail-autodiscover-autoconfig" }
maintenance = { status = "passively-maintained" }

[features]
default = ["apple", "dns"]
apple = []
dns = []

[dependencies]
# ENV
dotenv = "0.15.0"

# Domain parsing
addr = "0.15.3"

# Webserver
rocket = { version = "0.5.0", features = ["json"] }

# Serialization/Deserialization
quick-xml = { version = "0.37.2", default-features = false, features = [ "serialize" ] }
serde_json = "1.0.64"
serde = { version = "1.0.153", default-features = false, features = [ "derive" ] }
chrono = "0.4.34"
phf = { version = "0.11.3", features = ["macros"] }

[dependencies.tera]
version = "1"
default-features = false

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]