[package]
name = "mail-autodiscover-autoconfig"
version = "1.6.2"
edition = "2021"
rust-version = "1.74"

[features]
default = ["apple"]
apple = []
dns = []

[dependencies]
# ENV
dotenv = "0.15.0"

# Webserver
rocket = { version = "0.5.0", features = ["json"] }

# Serialization/Deserialization
quick-xml = { version = "0.37.2", default-features = false, features = [ "serialize" ] }
serde = { version = "1.0.153", default-features = false, features = [ "derive" ] }
chrono = { version = "0.4.34" , default-features = false, features = ["clock"]}
phf = { version = "0.11.3", features = ["macros"] }

[dependencies.tera]
version = "1"
default-features = false

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[[bin]]
name="dummy"
path="dummy.rs"

[profile.release]
lto = true
strip = true